--- a/Shophoto/Shophoto/Menus/SideMenu.xaml
+++ b/Shophoto/Shophoto/Menus/SideMenu.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Shophoto.Views.Menus.SideMenu"
+﻿<UserControl x:Class="Shophoto.Menus.SideMenu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
