Added delete imagas, attempted context menu

--- a/Shophoto/Shophoto/App.xaml
+++ b/Shophoto/Shophoto/App.xaml
@@ -7,6 +7,7 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <converters:BoolToVisConverter x:Key="BoolToVisConverter"></converters:BoolToVisConverter>
+        <SolidColorBrush x:Key="LightRed" Color="#ff4c4c"></SolidColorBrush>
         <vm:NinjectLocator x:Key="NinjectLocator"></vm:NinjectLocator>
     </Application.Resources>
 </Application>
