--- a/Shophoto/Shophoto/InputBox/InputBox.xaml
+++ b/Shophoto/Shophoto/InputBox/InputBox.xaml
@@ -6,11 +6,11 @@
              xmlns:local="clr-namespace:Shophoto.InputBox"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="50" d:DesignWidth="800">
     <Grid>
-        <TextBox Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"
-                 FontSize="20" Padding="5" VerticalAlignment="Center"
-                 >
+        <TextBox Height="50" Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"
+                 FontSize="20" Padding="8" VerticalAlignment="Center"
+                 BorderBrush="Transparent" BorderThickness="0">
         </TextBox>
     </Grid>
 </UserControl>
