--- a/Shophoto/Shophoto/Views/MainView.xaml
+++ b/Shophoto/Shophoto/Views/MainView.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:views="clr-namespace:Shophoto.Views"
-             xmlns:collections="clr-namespace:Shophoto.Views.Collections">
+             xmlns:collections="clr-namespace:Shophoto.Views.Collections"
+             xmlns:projects="clr-namespace:Shophoto.Views.Projects">
     <Grid>
-        <collections:Collections DataContext="{Binding CollectionsVM, Source={StaticResource NinjectLocator}}"></collections:Collections>
+        <projects:Projects DataContext="{Binding ProjectsVM}"></projects:Projects>
     </Grid>
 </UserControl>
