Add and delete FAB has been added in the project. Basic template for create project page added

--- a/Shophoto/Shophoto/Views/Collections/Collections.xaml
+++ b/Shophoto/Shophoto/Views/Collections/Collections.xaml
@@ -58,7 +58,7 @@
                                     DataContext="{Binding SortDropdownMenuVM}"
                                     ></menus:SortDropdownMenu>
             <buttons:FABPlusButton x:Name="CollectionFAB" VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                               DataContext="{Binding FABPlusButtonVM}"
+                               DataContext="{Binding CollectionsFABButtonVM}"
                                Margin="20"></buttons:FABPlusButton>
         </Grid>
         <common:ConfirmationBar DataContext="{Binding DeleteConfirmationBarVM}" VerticalAlignment="Bottom"></common:ConfirmationBar>
