--- a/Shophoto/Shophoto/Buttons/FABPlusButton.xaml
+++ b/Shophoto/Shophoto/Buttons/FABPlusButton.xaml
@@ -7,7 +7,7 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="210" d:DesignWidth="100"
-             Width="100" Height="210">
+             Width="100" Height="260">
     <UserControl.Resources>
         <Style TargetType="Button">
             <Setter Property="Foreground" Value="White"></Setter>
@@ -48,21 +48,31 @@
     <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Right">
         
         <StackPanel Margin="0,0,3,0" Visibility="{Binding IsOpen, Converter={StaticResource BoolToVisConverter}}">
-            <buttons:IconButton Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
+            <buttons:IconButton Visibility="{Binding HasDeleteButton, Converter={StaticResource BoolToVisConverter}}" 
+                                Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
                                 Icon="{iconPacks:Octicons Kind=Trashcan}"
                                 Content="Delete" Command="{Binding DeleteButtonCommand}">
             </buttons:IconButton>
-            <buttons:IconButton Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
+            <buttons:IconButton Visibility="{Binding HasTagButton, Converter={StaticResource BoolToVisConverter}}" 
+                                Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
                                 Icon="{iconPacks:Octicons Kind=Tag}" 
                                 Content="Tag"
                                 Command="{Binding TagButtonCommand}"></buttons:IconButton>
-            <buttons:IconButton Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
+            <buttons:IconButton Visibility="{Binding HasDownloadButton, Converter={StaticResource BoolToVisConverter}}"
+                                Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
                                 Icon="{iconPacks:Octicons Kind=DesktopDownload}"
                                 Content="Download" Command="{Binding DownloadButtonCommand}">
             </buttons:IconButton>
-            <buttons:IconButton Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5" 
+            <buttons:IconButton Visibility="{Binding HasUploadButton, Converter={StaticResource BoolToVisConverter}}" 
+                                Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5" 
                                 Icon="{iconPacks:Octicons Kind=CloudUpload}"
                                 Content="Upload" Command="{Binding UploadButtonCommand}">
+            </buttons:IconButton>
+            <buttons:IconButton Visibility="{Binding HasAddProjectButton, Converter={StaticResource BoolToVisConverter}}"
+                                Template="{StaticResource FABMenuButtons}" Margin="0,0,0,5"
+                                Icon="{iconPacks:Material Kind=FolderPlus}"
+                                Content="Add Project" Command="{Binding AddProjectButtonCommand}">
+                
             </buttons:IconButton>
         </StackPanel>
         <Button HorizontalAlignment="Right" Command="{Binding ToggleButtonCommand}" Template="{StaticResource FABPlusButton}"></Button>
