Added a blue selected color, added sort and search bar for projects page

--- a/Shophoto/Shophoto/App.xaml
+++ b/Shophoto/Shophoto/App.xaml
@@ -8,6 +8,7 @@
     <Application.Resources>
         <converters:BoolToVisConverter x:Key="BoolToVisConverter"></converters:BoolToVisConverter>
         <SolidColorBrush x:Key="LightRed" Color="#ff4c4c"></SolidColorBrush>
+        <SolidColorBrush x:Key="SelectedBlue" Color="#468284"></SolidColorBrush>
         <vm:NinjectLocator x:Key="NinjectLocator"></vm:NinjectLocator>
     </Application.Resources>
 </Application>
