--- a/Shophoto/Shophoto/InputBox/InputBox.xaml
+++ b/Shophoto/Shophoto/InputBox/InputBox.xaml
@@ -7,10 +7,16 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style x:Key="InputBoxStyle" TargetType="TextBox">
+            <Setter Property="BorderBrush" Value="Transparent"></Setter>
+            <Setter Property="BorderThickness" Value="0,0,0,2"></Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <TextBox Height="50" Text="{Binding InputText, UpdateSourceTrigger=PropertyChanged}"
-                 FontSize="20" Padding="8" VerticalAlignment="Center"
-                 BorderBrush="Transparent" BorderThickness="0">
+                 FontSize="20" Padding="10" VerticalAlignment="Center" 
+                 Style="{StaticResource InputBoxStyle}">
         </TextBox>
     </Grid>
 </UserControl>
